--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@types/express": "^4.17.21",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "prisma": "^5.19.1"
   }
 }
